fixed spacing to match figma

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ header {
 }
 
 .margin-top {
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .margin-top-none {
